# peterelmwood_com

./: .env.example  Dockerfile  PRE_LAUNCH.md  README.md  SETUP.md  cloud-run-service.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
config/settings/: base.py  local.py  production.py
core/: admin.py  models.py  tests.py
core/management/commands/: generate_sample_data.py
core/migrations/: 0001_initial.py
docs/: ISSUES_TO_CREATE.md  MILESTONES.md
scripts/: authenticate_docker.sh  deploy_application.sh  deploy_cloudrun.sh  deploy_infrastructure.sh
terraform/: .gitignore  README.md  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
