[project]
name = "peterelmwood-com"
version = "0.0.5"
description = "Personal website for Peter Elmwood"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "psycopg[binary]>=3.2.3",
    "django-storages[google]>=1.14.4",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.32.0",
    "django-environ>=0.11.2",
    "whitenoise>=6.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
